--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -434,12 +434,12 @@
 
         <!-- 購物車不為空之樣式 start -->
         <!-- 收藏清單第一本書明細 start -->
-        <div class="cart-item wish-v">
+        <div class="cart-item item-align wish-v">
           <div class="bcov-text">
             <a href="javascript:void(0);"><img src="/static/img/s_books/p03.jpg"></a>
             <p class="bookname">Japan: cat culture</p>
           </div>
-          <div class="price">
+          <div class="price price-align">
             <p class="unit-price">
               <b>
                 <span class="money">
@@ -461,12 +461,12 @@
         <!-- 收藏清單第一本書明細 end -->
 
         <!-- 收藏清單第二本書明細 start -->
-        <div class="cart-item wish-v ">
+        <div class="cart-item item-align wish-v ">
           <div class="bcov-text">
             <a href="javascript:void(0);"><img src="/static/img/s_books/f08.jpg"></a>
             <p class="bookname">Alfred Sisley</p>
           </div>
-          <div class="price">
+          <div class="price price-align">
             <p class="unit-price">
               <b>
                 <span class="money">
