--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -113,10 +113,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/new">NEW</a>
+            <a class="nav-link" href="/book/new">NEW</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            <a class="nav-link dropdown-toggle" href="javascript:void(0);" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               BOOKS
             </a>
@@ -135,7 +135,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="about.html">ABOUT</a>
+            <a class="nav-link " href="/about">ABOUT</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" action="/search">
