--- a/src/main/resources/templates/insidepage.html
+++ b/src/main/resources/templates/insidepage.html
@@ -268,7 +268,7 @@
     <div class="row ">
       <div class="col-12 col-sm-6 col-md-4">
         <div class="card">
-          <a href="javascript:void(0);"><img class="card-img-top" src="/static/img/books/p17.jpg"></a>
+          <a href="/book/insidepage/ri-ben-nopanwu"><img class="card-img-top" src="/static/img/books/p17.jpg"></a>
           <div class="card-body card-sty">
             <p class="card-text">日本のパン屋</p>
             <p><strong>NT 800</strong></p>
@@ -277,7 +277,7 @@
       </div>
       <div class="col-12 col-sm-6 col-md-4">
         <div class="card">
-          <a href="javascript:void(0);"><img class="card-img-top" src="/static/img/books/m13.jpg"></a>
+          <a href="/book/insidepage/architects-6-2021"><img class="card-img-top" src="/static/img/books/m13.jpg"></a>
           <div class="card-body card-sty">
             <p class="card-text">Architects #6/2021</p>
             <p><strong>NT 680</strong></p>
@@ -286,7 +286,7 @@
       </div>
       <div class="col-12  col-sm-6 col-md-4">
         <div class="card ">
-          <a href="javascript:void(0);"><img class="card-img-top" src="/static/img/books/m11.jpg"></a>
+          <a href="/book/insidepage/interior-design-3"><img class="card-img-top" src="/static/img/books/m11.jpg"></a>
           <div class="card-body card-sty">
             <p class="card-text">Interior design #3</p>
             <p><strong>NT 500</strong></p>
