--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -118,7 +118,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/new">NEW</a>
+            <a class="nav-link" href="/book/new">NEW</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -140,7 +140,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link " href="about.html">ABOUT</a>
+            <a class="nav-link " href="/about">ABOUT</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" action="/search">
