--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -161,13 +161,15 @@
         </a>
       </div>
       <div class="carousel-item trans-txt">
-        <a href="javascript:void(0);">
+        <a href="/book/insidepage/alfred-stieglitz">
         <p class="as-txt">Alfred Stieglitz</p>
         <img class="d-block w-100" src="/static/img/banner6.jpg" alt="Alfred Stieglitz">
       </a>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="/static/img/banner7.jpg" alt="John Ritto Penniman">
+        <a href="/book/insidepage/landscape-painting">
+        <img class="d-block w-100" src="/static/img/banner7.jpg" alt="Landscape painting">
+      </a>
       </div>
       
     </div>
