--- a/src/main/resources/templates/bookland_home.html
+++ b/src/main/resources/templates/bookland_home.html
@@ -151,7 +151,7 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <a href="javascript:void(0);">
+        <a href="/book/insidepage/edouard-vuillard">
         <img class="d-block w-100" src="/static/img/banner1.jpg" alt="Edouard Vuillard">
       </a>
       </div>
