--- a/src/main/resources/templates/model-hf.html
+++ b/src/main/resources/templates/model-hf.html
@@ -146,7 +146,7 @@
   <!-- 導覽列 end -->
 
   <!-- loading 圖示 start  -->
-  <div class="load-bgc hide">
+  <div class="load-bgc ">
     <div class="load-item ">
       <div class="load-pic">
         <img src="/static/css/icon/colorbook-load.png" class="book-p">
